# FromPlussesToAssembly

./: README.md
FromPlusesToAssemblyLab1/: CMakeLists.txt  Constants.h  ConstantsTest.txt  SymbolTableV2_0.h  VariableTest.txt  main.cpp  main_2.cpp  test.cpp  test_DKA.cpp  test_main.cpp
FromPlusesToAssemblyLab1/ConstantTable/: ConstantTable.cpp  ConstantTable.h
FromPlusesToAssemblyLab1/ConstantTableV2_0/: ConstantTableV2_0.cpp  ConstantTableV2_0.h
FromPlusesToAssemblyLab1/Lexeme/: Lexeme.cpp  Lexeme.h
FromPlusesToAssemblyLab1/LexemeV2_0/: LexemeV2_0.cpp  LexemeV2_0.h
FromPlusesToAssemblyLab1/OutputModuleV2_0/: OutputModuleV2_0.cpp  OutputModuleV2_0.h
FromPlusesToAssemblyLab1/Scanner/: Scanner.cpp  Scanner.h
FromPlusesToAssemblyLab1/VariableTable/: VariableTable.cpp  VariableTable.h
FromPlusesToAssemblyLab1/VariableTableV2_0/: VariableTableV2_0.cpp  VariableTableV2_0.h
FromPlusesToAssemblyLab1/txtFiles1/: delimiters.txt  keywords.txt  tokens.txt
FromPlusesToAssemblyLab1/xlsxFiles/: Constants.xlsx  Identifiers.xlsx  Key_words.xlsx  Separators.xlsx
